# test_task

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
core/: config.py  llm_processor.py  pdf_processor.py
core/routers/: llm_router.py  pdf_router.py
