[project]
name = "test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "vshyshkin",email = "vshishunjy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf (>=1.26.4,<2.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "litellm (>=1.76.1,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pytesseract (>=0.3.13,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
